--- a/analise-de-dados-duracao-gravidez-final-obito.ipynb
+++ b/analise-de-dados-duracao-gravidez-final-obito.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Leitura do arquivo  Excel, ao abrir podemos comparar a quantidade de tabelas com as apresentadas abaixo:"
+    "## Leitura do arquivo  Excel, ao abrir podemos comparar a quantidade de tabelas com as tabelas apresentadas abaixo:"
    ]
   },
   {
@@ -477,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Antes do parto morreram mais crianças do que depois as 22 semanas de gravidez."
+    "## Antes do parto morreram mais crianças do que depois do parto as 22 semanas de gravidez."
    ]
   },
   {
@@ -594,7 +594,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Quase chegando aos 8 meses, mais de 1200 bebes vieram a óbito antes do parto"
+    "## Quase chegando aos 8 meses, mais de 1200 bebês vieram a óbito antes do parto"
    ]
   },
   {
@@ -633,7 +633,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Quase aos 9 meses de gestação quase mil vieram a óbito antes do parto..."
+    "## Quase aos 9 meses de gestação, quase mil vieram a óbito antes do parto..."
    ]
   },
   {
@@ -672,7 +672,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## O número  total de ignorados em relação a cada parto"
+    "## O número  total de ignorados em relação a cada parto:"
    ]
   },
   {
